maybe fixed http upload

--- a/app/src/main/res/layout/new_note_activity.xml
+++ b/app/src/main/res/layout/new_note_activity.xml
@@ -29,7 +29,6 @@
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="saveNote()"
             android:text="Save" />
     </LinearLayout>
 
@@ -47,5 +46,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:gravity="top" />
 </LinearLayout>
